--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.0",
+    "geist": "^1.4.2",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
+    "moment-timezone": "^0.6.0",
     "next": "15.3.4",
     "pnpm": "^10.12.4",
     "react": "^19.0.0",
