--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
           cd ${{ secrets.VPS_PATH }} && \
+          git fetch --all && \
+          git reset --hard origin/master && \
           git pull origin master
         "
 
