feat(dashboard): add components for admin dashboard including RecentBookingsTable, PlatformHealthWidget, QuickActionsWidget, and RecentActivitiesWidget
- Implement RecentBookingsTable with booking details and actions
- Create PlatformHealthWidget to display system and server metrics
- Add QuickActionsWidget for common administrative tasks
- Introduce RecentActivitiesWidget to show recent platform activities
- Style dashboard with custom CSS for responsiveness and aesthetics

Add modular components for responsive admin dashboard

Introduces reusable components such as RecentBookingsTable,
PlatformHealthWidget, QuickActionsWidget, and RecentActivitiesWidget
to enhance the admin dashboard.

Replaces hardcoded dashboard structure with a modular, responsive
layout using custom CSS and styling improvements. Integrates
charts and widgets for better visualization and interactivity.

Improves maintainability and scalability by decoupling logic
and enabling easier customization of dashboard elements.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@headlessui/react": "^2.2.4",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.7.0",
+    "@mui/x-data-grid": "^8.7.0",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
@@ -27,11 +29,13 @@
     "next": "15.3.4",
     "pnpm": "^10.12.4",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-slick": "^0.30.3",
+    "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "zustand": "^5.0.6"
   },
