feat: Add Responsive Stats Card component for displaying key metrics
feat: Implement Responsive Bookings Table component with filtering and actions

feat: Create Notifications Widget to display recent activity alerts

feat: Develop Performance Metrics Widget to showcase key performance indicators

feat: Introduce Professional Activities Widget for tracking platform activities

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ ignoredBuiltDependencies:
   - unrs-resolver
 
 onlyBuiltDependencies:
+  - '@mui/x-telemetry'
   - '@tailwindcss/oxide'
   - core-js
   - sharp
