--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@headlessui/react": "^2.2.4",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/system": "^7.2.0",
     "@mui/x-charts": "^8.7.0",
     "@mui/x-data-grid": "^8.7.0",
+    "@mui/x-data-grid-generator": "^8.7.0",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
