--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "geist": "^1.4.2",
     "jspdf": "^3.0.1",
@@ -39,11 +40,13 @@
     "react-slick": "^0.30.3",
     "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
