--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@mui/x-charts": "^8.7.0",
     "@mui/x-data-grid": "^8.7.0",
     "@mui/x-data-grid-generator": "^8.7.0",
+    "@tiptap/extension-character-count": "^2.26.0",
+    "@tiptap/extension-placeholder": "^2.26.0",
+    "@tiptap/pm": "^2.26.0",
+    "@tiptap/react": "^2.26.0",
+    "@tiptap/starter-kit": "^2.26.0",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
