--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "geist": "^1.4.2",
