--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/react": "^2.26.0",
     "@tiptap/starter-kit": "^2.26.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/moment": "^2.13.0",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
@@ -34,6 +35,7 @@
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "next": "15.3.4",
     "pnpm": "^10.12.4",
