--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@emotion/use-insertion-effect-with-fallbacks": "^1.2.0",
     "@headlessui/react": "^2.2.4",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
