--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-charts": "^8.7.0",
     "@mui/x-data-grid": "^8.7.0",
     "@mui/x-data-grid-generator": "^8.7.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@tiptap/extension-character-count": "^2.26.0",
     "@tiptap/extension-placeholder": "^2.26.0",
     "@tiptap/pm": "^2.26.0",
@@ -32,6 +33,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "geist": "^1.4.2",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
@@ -45,6 +47,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-pdf": "^10.0.1",
     "react-slick": "^0.30.3",
     "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
