--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "15.3.4",
     "pnpm": "^10.12.4",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
