feat: add dependency installation step in deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,13 @@ jobs:
           cd ${{ secrets.VPS_PATH }} && \
           git diff --quiet HEAD^ HEAD -- package.json pnpm-lock.yaml || echo 'dependencies-changed' > /tmp/dependency-status
         "
-
+        - name: Install dependencies
+          run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            cd ${{ secrets.VPS_PATH }} && \
+            rm -rf node_modules && \
+            pnpm install
+          "
     - name: Install dependencies if changed
       if: ${{ steps.dependency-check.outputs.result == 'dependencies-changed' }}
       run: |
