feat: Add Booking Data Table, Cancel Booking Modal, and View Toggle components
- Implemented BookingDataTable component for displaying booking details with actions.
- Created CancelBookingModal for handling booking cancellations with user input and confirmation.
- Added ViewToggle component to switch between card and table views for bookings, including item counts.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-charts": "^8.7.0",
     "@mui/x-data-grid": "^8.7.0",
     "@mui/x-data-grid-generator": "^8.7.0",
+    "@mui/x-date-pickers": "^8.9.2",
     "@react-pdf/renderer": "^4.3.0",
     "@tiptap/extension-character-count": "^2.26.0",
     "@tiptap/extension-placeholder": "^2.26.0",
