--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/starter-kit": "^2.26.0",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
@@ -54,6 +55,7 @@
     "react-slick": "^0.30.3",
     "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.6"
   },
